Added topSection to secondSection to App.js

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   height: 40vmin;
   pointer-events: none;
 }
+.curve {
+  max-width: 1440px;
+  /* display: flex; */
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
